--- a/src/.env
+++ b/src/.env
@@ -1,5 +1,5 @@
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=bridge
-DB_USER=<your_user>
-DB_PASSWORD=<your_password>
+DB_USER=helio
+DB_PASSWORD=rwc2011
